--- a/bookmark_app_frontend/src/components/LoginForm/index.css
+++ b/bookmark_app_frontend/src/components/LoginForm/index.css
@@ -3,55 +3,55 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 92vh;
     width: 90%;
     max-width: 1110px;
     margin: auto;
-  }
-  
-  @media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 992px) {
     .login-form-container {
-      flex-direction: row;
-      justify-content: space-around;
+        flex-direction: row;
+        justify-content: space-around;
     }
-  }
-  
-  .login-website-logo-mobile-image {
+}
+
+.login-website-logo-mobile-image {
     width: 165px;
     margin-top: 50px;
     margin-bottom: 35px;
-  }
-  
-  @media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 992px) {
     .login-website-logo-mobile-image {
-      display: none;
+        display: none;
     }
-  }
-  
-  .login-image {
+}
+
+.login-image {
     width: 278px;
-  }
-  
-  @media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 992px) {
     .login-image {
-      width: 60%;
-      max-width: 524px;
-      flex-shrink: 1;
-      margin-right: 20px;
+        width: 60%;
+        max-width: 524px;
+        flex-shrink: 1;
+        margin-right: 20px;
     }
-  }
-  
-  .login-website-logo-desktop-image {
+}
+
+.login-website-logo-desktop-image {
     width: 185px;
-  }
-  
-  @media screen and (max-width: 991px) {
+}
+
+@media screen and (max-width: 991px) {
     .login-website-logo-desktop-image {
-      display: none;
+        display: none;
     }
-  }
-  
-  .form-container {
+}
+
+.form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,34 +59,34 @@
     border-radius: 8px;
     width: 100%;
     max-width: 350px;
-  }
-  
-  @media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 992px) {
     .form-container {
-      width: 350px;
-      flex-shrink: 0;
-      box-shadow: 0px 8px 40px rgba(7, 7, 7, 0.08);
-      padding: 64px 48px 64px 48px;
+        width: 350px;
+        flex-shrink: 0;
+        box-shadow: 0px 8px 40px rgba(7, 7, 7, 0.08);
+        padding: 64px 48px 64px 48px;
     }
-  }
-  
-  .input-container {
+}
+
+.input-container {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
     width: 100%;
-  }
-  
-  .input-label {
+}
+
+.input-label {
     margin-bottom: 0px;
     font-family: 'Roboto';
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
     color: #475569;
-  }
-  
-  .username-input-field {
+}
+
+.username-input-field {
     font-size: 14px;
     height: 40px;
     border: 1px solid #d7dfe9;
@@ -96,9 +96,9 @@
     margin-top: 5px;
     padding: 8px 16px 8px 16px;
     outline: none;
-  }
-  
-  .password-input-field {
+}
+
+.password-input-field {
     font-size: 14px;
     height: 40px;
     border: 1px solid #d7dfe9;
@@ -108,9 +108,9 @@
     margin-top: 5px;
     padding: 8px 16px 8px 16px;
     outline: none;
-  }
-  
-  .login-button {
+}
+
+.login-button {
     font-family: 'Roboto';
     font-weight: bold;
     font-size: 14px;
@@ -124,9 +124,9 @@
     border: none;
     outline: none;
     cursor: pointer;
-  }
-  
-  .error-message {
+}
+
+.error-message {
     align-self: start;
     font-size: 12px;
     margin-top: 3px;
@@ -135,4 +135,10 @@
     font-size: 12px;
     line-height: 16px;
     color: #ff0b37;
-  }
+}
+
+@media screen and (max-width:450px) {
+    .hide-image-mobile {
+        display: none;
+    }
+}
